Disable files removal on startup